--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 scripts/package.sh export-ignore
-scripts/bootstrap export-ignore
+scripts/update export-ignore
