--- a/lib/actions/config
+++ b/lib/actions/config
@@ -24,7 +24,7 @@
 # along with Symphony.  If not, see <http://www.gnu.org/licenses/>.            #
 #                                                                              #
 # For more information on the Symphony Toolkit, please visit:                  #
-# http://www.alces-software.org/symphony                                       #
+# https://github.com/alces-software/symphony                                       #
 #                                                                              #
 ################################################################################
 action=$1
@@ -37,7 +37,7 @@ case $action in
 	    echo "$alces_BINNAME $us: alces tools already configured in '$HOME/.alces'."
 	elif [ "$UID" == "0" ]; then
 	    echo "$alces_BINNAME $us: refusing to configure alces tools for root user."
-	elif [ ! -d "/opt/alces/opt/${alces_SUITENAME}" ]; then
+	elif [ ! -d "/opt/clusterware/opt/${alces_SUITENAME}" ]; then
 	    echo "$alces_BINNAME $us: alces tools is not installed with a system-wide configuration."
 	else
 	    mkdir -p "$HOME/gridware/pkg" "$HOME/gridware/etc/modules"
@@ -47,7 +47,7 @@ case $action in
 		[[ -d "${alces_PATH}/${a}" ]] || mkdir -p "${alces_PATH}/${a}"
 	    done
             # Create initial configuration files
-	    cp -r "/opt/alces/etc/skel"/* "${alces_PATH}/etc"
+	    cp -r "/opt/clusterware/etc/skel"/* "${alces_PATH}/etc"
 	    if [ -d "$HOME/gridware/etc/repos" ]; then
 		rm -rf "${alces_PATH}/etc/repos"
 	    else
